fix: make sure non visible item has 0 height

--- a/src/components/Item/index.css
+++ b/src/components/Item/index.css
@@ -70,4 +70,5 @@
 
 .Item--hidden {
     max-height: 0;
+    padding: 0;
 }
